Implement(webapp): Document

--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.9.3",
     "@next-auth/mongodb-adapter": "^1.0.4",
     "@tanstack/react-query": "^4.0.10",
+    "@tiptap/react": "2.0.0-beta.114",
+    "@tiptap/starter-kit": "2.0.0-beta.191",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^6.5.1",
