Update: add next-transpile-modules

--- a/apps/landing-page/package.json
+++ b/apps/landing-page/package.json
@@ -18,16 +18,17 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^6",
+    "lib": "workspace:*",
     "mongodb": "^4.8.0",
     "next": "12.2.3",
     "next-auth": "^4.10.2",
+    "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "sivgen": "^0.0.21",
-    "zustand": "4.0.0-rc.4",
     "ui": "workspace:*",
-    "lib": "workspace:*"
+    "zustand": "4.0.0-rc.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -35,9 +36,9 @@
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "eslint": "8.20.0",
+    "eslint-config-custom": "workspace:*",
     "eslint-config-next": "12.2.3",
     "prettier": "^2.7.1",
-    "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
     "typescript": "4.7.4"
   }
