--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@tiptap/starter-kit": "2.0.0-beta.191",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "bson": "^4.6.5",
     "framer-motion": "^6.5.1",
     "lib": "workspace:*",
     "mongodb": "^4.8.0",
