Optimize(web/textDocument): use debouncing

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^4.0.10",
     "@tiptap/react": "2.0.0-beta.114",
     "@tiptap/starter-kit": "2.0.0-beta.191",
+    "@types/lodash": "^4.14.182",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "bson": "^4.6.5",
@@ -26,6 +27,7 @@
     "next-auth": "^4.10.2",
     "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "ui": "workspace:*",
