--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@next-auth/mongodb-adapter": "^1.0.4",
+    "@tabler/icons": "^1.78.1",
     "@tanstack/react-query": "^4.0.10",
     "@tiptap/react": "2.0.0-beta.114",
     "@tiptap/starter-kit": "2.0.0-beta.191",
@@ -21,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "bson": "^4.6.5",
     "framer-motion": "^6.5.1",
+    "html-react-parser": "^3.0.1",
     "lib": "workspace:*",
     "mongodb": "^4.8.0",
     "next": "12.2.3",
