--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,9 +12,11 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@formkit/auto-animate": "1.0.0-beta.1",
     "@next-auth/mongodb-adapter": "^1.0.4",
     "@tabler/icons": "^1.78.1",
     "@tanstack/react-query": "^4.0.10",
+    "@tanstack/react-query-devtools": "^4.0.10",
     "@tiptap/react": "2.0.0-beta.114",
     "@tiptap/starter-kit": "2.0.0-beta.191",
     "@types/lodash": "^4.14.182",
