Update(web/packages): add @tiptap/core @tiptap/extension-color @tiptap/extension-text-style

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,9 @@
     "@tabler/icons": "^1.78.1",
     "@tanstack/react-query": "^4.0.10",
     "@tanstack/react-query-devtools": "^4.0.10",
+    "@tiptap/core": "2.0.0-beta.182",
+    "@tiptap/extension-color": "2.0.0-beta.12",
+    "@tiptap/extension-text-style": "2.0.0-beta.26",
     "@tiptap/react": "2.0.0-beta.114",
     "@tiptap/starter-kit": "2.0.0-beta.191",
     "@types/lodash": "^4.14.182",
