--- a/apps/chromium-extension/manifest.json
+++ b/apps/chromium-extension/manifest.json
@@ -4,11 +4,11 @@
   "description": "Supercharge your writing with blazing fast auto-completions.",
   "version": "0.0.1",
   "icons": {
-    "16": "/logo/16.png",
-    "32": "/logo/32.png",
-    "48": "/logo/48.png",
-    "96": "/logo/48.png",
-    "128": "/logo/128.png"
+    "16": "logo/16.png",
+    "32": "logo/32.png",
+    "48": "logo/48.png",
+    "96": "logo/48.png",
+    "128": "logo/128.png"
   },
   "action": {
     "default_popup": "index.html"
@@ -19,7 +19,8 @@
   "content_scripts": [
     {
        "matches": ["http://*/*", "https://*/*"],
-       "js": ["./static/js/content.js"]
+       "js": ["src/content-script/index.ts"],
+       "run_at": "document_start"
      }
-  ],
+  ]
 }
