--- a/apps/chromium-extension/package.json
+++ b/apps/chromium-extension/package.json
@@ -13,18 +13,20 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "framer-motion": "^6.5.1",
+    "lib": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*",
-    "lib": "workspace:*"
+    "ui": "workspace:*"
   },
   "devDependencies": {
+    "@crxjs/vite-plugin": "^1.0.13",
     "@types/chrome": "^0.0.193",
+    "@types/node": "18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
-    "typescript": "^4.6.4",
     "tsconfig": "workspace:*",
+    "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
 }
