Update(apps/extension): setup chakra-ui

--- a/apps/extension/preferences/package.json
+++ b/apps/extension/preferences/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-app",
+  "name": "configure-app",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.2.4",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@types/chrome": "^0.0.193",
+    "framer-motion": "^6.5.1",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "ui": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
@@ -20,6 +25,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
+    "tsconfig": "workspace:*",
     "typescript": "4.7.4"
   }
 }
