--- a/apps/extension/preferences/package.json
+++ b/apps/extension/preferences/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
     "tsconfig": "workspace:*",
+    "eslint-config-custom": "workspace:*",
     "typescript": "4.7.4"
   }
 }
