Update: rename 'customize.html' -> 'preferences.html'

--- a/apps/extension/preferences/package.json
+++ b/apps/extension/preferences/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export && mv out/_next out/next && sed -i '' -e 's/\\/_next/\\.\\/next/g' out/**.html && mv out/index.html ../extension/customize.html && rsync -va --delete-after out/next/ ../extension/next/ && rm -rf out",
-    "build:linux": "next build && next export && mv out/_next out/next && sed -i 's/\\/_next/\\.\\/next/g' out/**.html && mv out/index.html ../extension/customize.html && rsync -va --delete-after out/next/ ../extension/next/ && rm -rf out",
+    "build": "next build && next export && mv out/_next out/next && sed -i '' -e 's/\\/_next/\\.\\/next/g' out/**.html && mv out/index.html ../extension/preferences.html && rsync -va --delete-after out/next/ ../extension/next/ && rm -rf out",
+    "build:linux": "next build && next export && mv out/_next out/next && sed -i 's/\\/_next/\\.\\/next/g' out/**.html && mv out/index.html ../extension/preferences.html && rsync -va --delete-after out/next/ ../extension/next/ && rm -rf out",
     "start": "next start",
     "lint": "next lint"
   },
