--- a/apps/extension/preferences/package.json
+++ b/apps/extension/preferences/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@types/chrome": "^0.0.193",
+    "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "next": "latest",
     "react": "latest",
